Fix horizontal overflow due to the  of vertical scrollbar in firefox

--- a/src/firefox/popup/grid.css
+++ b/src/firefox/popup/grid.css
@@ -1,6 +1,7 @@
 .row {
-  max-width: 630px;
-  margin-bottom: 10px;
+  /* assuming a container wrapper */
+  max-width: 100%;
+  margin: 10px auto;
 }
 
 .row:last-child {
